# winafl

./: .appveyor.yml  .gitignore  .gitmodules  CMakeLists.txt  ChangeLog  README  README.md  afl-analyze.c  afl-fuzz.c  afl-showmap.c  afl-staticinstr.c  afl-staticinstr.h  afl-tmin.c  alloc-inl.h  config.h  custom_net_fuzzer.c  custom_winafl_server.c  custom_winafl_server.cpp  custom_winafl_server.def  custom_winafl_server.h  debug.h  gdiplus.cpp  hash.h  ipttool.c  ipttool.h  modules.c  modules.h  ptdecode.c  ptdecode.h  readme_dr.md  readme_pt.md  readme_syzygy.md  readme_tinyinst.md  test.cpp  test_netmode.cpp  test_simple_winsock_client.cpp  test_static.cpp  tinyinst_afl.cpp  tinyinst_afl.h  tinyinst_covmap.cpp  (+10 more)
.github/workflows/: build.yml  check_python.yml
ReadFile_Test_Project/: Source.cpp  image.img
afl_docs/: ChangeLog  INSTALL  QuickStartGuide.txt  README  env_variables.txt  notes_for_asan.txt  parallel_fuzzing.txt  perf_tips.txt  sister_projects.txt  status_screen.txt  technical_details.txt
afl_post_library/: CMakeLists.txt  post_library.c
bin32/: test.ilk  test_gdiplus.ilk  winafl.exp  winafl.lib
bin64/: test.ilk  test_gdiplus.ilk  winafl.exp  winafl.lib
testcases/: README.testcases
testcases/tests/: big.txt  exception.txt
